examples/errors/errorStart.js
export { start, stop };


const start = function (emitter) {
    throw `Error`;
};

const stop = function (emitter) {
    throw `Error`;
};
